Missed things in my migration. Updated readme with some crude notes.

--- a/pb.yml
+++ b/pb.yml
@@ -1,4 +1,11 @@
 ---
+- hosts: alertmanager
+  become: yes
+  become_user: root
+  become_method: sudo
+  roles:
+    - alertmanager
+
 - hosts: prometheus
   become: yes
   become_user: root
