--- a/roles/prometheus/files/alertrules.yml
+++ b/roles/prometheus/files/alertrules.yml
@@ -9,3 +9,11 @@ groups:
     annotations:
       summary: "Endpoint {{ $labels.instance }} down"
       description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 1 minutes."
+
+  - alert: InstanceDownCritical
+        expr: up{job="services"} < 1 
+        for: 1m 
+        labels:
+          severity: high
+        annotations:
+          summary: 'Alert with high severity.'
